--- a/sandbox/index.css
+++ b/sandbox/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Inter var';
+  font-style: oblique 0deg 10deg;
+  font-weight: 100 900;
+  src: url(./fonts/Inter-VariableFont_slnt\,wght.ttf) format('truetype');
+}
